# pybind

./: CMakeLists.txt
Main/: main.cpp
vsstudio/: gen.bat
